--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "request-promise-native": "^1.0.7",
     "ts-node": "^8.0.3",
     "typescript": "^3.4.3"
+  },
+  "devDependencies": {
+    "lodash": ">=4.17.13"
   }
 }
